Noi modificari in cod

--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -23,6 +23,6 @@
         <dd> -Anii de studi 2023-2026</dd>
         <dd> -Specializare: Finate and Banking</dd> 
     </ol>   
-    
+ <h2><i>Abilitati personale</i></h2>    
 </body>
 </html>
