--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {background-color: rgb(245, 229, 214);}
+        h1,h2   {color: rgb(63, 46, 46);}
+        p    {color: rgb(56, 53, 99);}
+        li   {color: rgb(59, 68, 61);}
+        h1,h2   {border: 2px solid rgb(164, 126, 235); width: 30%; height: 10%;}
+        h1,h2 { text-align: center;}
+        h3,p { text-align: left;}
+        </style>
     <title>CV-personal NIchifor Eduard</title>
 <h1>Nichifor Eduard</h1>
 <img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
@@ -23,6 +32,20 @@
         <dd> -Anii de studi 2023-2026</dd>
         <dd> -Specializare: Finate and Banking</dd> 
     </ol>   
- <h2><i>Abilitati personale</i></h2>    
+ <h2><i>Abilitati personale</i></h2>  
+    <ul>
+        <li><u>Comunicabil</u></li>
+        <li><u>Ambitios</u></li>
+        <li><u>Perseverent</u></li>
+        <li><u>Creativitate</u></li>
+        <li><u>Toleranta la stre</u></li>
+        <li><u>Flexibilitate</u></li>
+    </ul> 
+    <h2> Rezumat</h2>
+    <p>Experienta de lucru pe domeniul profesional nu este din motivele<br>
+        lipsei unei oportunitati. Avand in acelasi timp experienta de lucru <br>
+        pe domeniu alimentar si constructie activand in acest domeniu in mai <br>
+        putin de un an.
+    </p>
 </body>
 </html>
