--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-personal NIchifor Eduard</title>
-<h1>Nichifor Eduard</h1>
-<img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
 </head>
 <body>
+    <div>
+        <h1>Nichifor Eduard</h1>
+<img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
+    </div>
+    <div>
  <H2><i>Detalii de cintact:</i></H2>
     <ul>
         <li>nichifor.eduard20@gmail.com</li>
         <li>0792370987</li>
         <li>Cluj-Napoca; Floresti</li>
     </ul>
+    </div>
+    <div>
  <h2><i>Educatie</i></h2>
     <ol>
         <li>Scoala de arte plastice "Romulus Ladea"</li>
@@ -22,7 +27,9 @@
         <li>Universitate de Stiinte Economice</li>
         <dd> -Anii de studi 2023-2026</dd>
         <dd> -Specializare: Finate and Banking</dd> 
-    </ol>   
+    </ol>
+    </div>
+    <div>   
  <h2><i>Abilitati personale</i></h2>  
     <ul>
         <li><u>Comunicabil</u></li>
@@ -31,12 +38,15 @@
         <li><u>Creativitate</u></li>
         <li><u>Toleranta la stre</u></li>
         <li><u>Flexibilitate</u></li>
-    </ul> 
+    </ul>
+    </div>
+    <div> 
     <h2> Rezumat</h2>
     <p>Experienta de lucru pe domeniul profesional nu este din motivele<br>
         lipsei unei oportunitati. Avand in acelasi timp experienta de lucru <br>
         pe domeniu alimentar si constructie activand in acest domeniu in mai <br>
         putin de un an.
     </p>
+    </div>
 </body>
 </html>
