--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-personal NIchifor Eduard</title>
+    <link rel="stylesheet" href="./style/main.css"/>
 </head>
 <body>
     <div>
         <h1>Nichifor Eduard</h1>
 <img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
     </div>
-    <div>
+    <div class="green">
  <H2><i>Detalii de cintact:</i></H2>
     <ul>
         <li>nichifor.eduard20@gmail.com</li>
