--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style/main.css"/>
 </head>
 <body>
-    <div>
+    <div class="prime">
         <h1>Nichifor Eduard</h1>
 <img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
+<!-- cum sa pozitionez imaginea ca nu reusesc nici prin css ici prin html-->
     </div>
     <div class="green">
  <H2><i>Detalii de cintact:</i></H2>
@@ -19,7 +20,7 @@
         <li>Cluj-Napoca; Floresti</li>
     </ul>
     </div>
-    <div>
+    <div class="information">
  <h2><i>Educatie</i></h2>
     <ol>
         <li>Scoala de arte plastice "Romulus Ladea"</li>
