New element img

--- a/New project/web-site.html
+++ b/New project/web-site.html
@@ -11,7 +11,7 @@
 
     <header>
         <div>
-            <img src="" alt="">
+            <img src="./img/header.logo.png" alt="not found">
             <p></p>
         </div>
         <nav>
@@ -21,7 +21,7 @@
             <a href=""></a>
             <button></button>
             <button></button>
-            <img src="" alt="">
+            <img src="./img/header.icon.png" alt="not found">
         </nav>
     </header>
     
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/img.rand 2.png" alt="not found">
         </div>
     </div>
    
@@ -46,22 +46,22 @@
     <h2></h2>
         <div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand3.icon1.png" alt="not found">
                 <p></p>
                 <p></p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand3.icon2.png" alt="not found">
                 <p></p>
                 <p></p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand3.icon3.png" alt="not found">
                 <p></p>
                 <p></p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand3.icon4.png" alt="not found">
                 <p></p>
                 <p></p>
             </div>
@@ -83,7 +83,7 @@
             <p></p>
         </div>  
         <div>
-            <img src="" alt="">
+            <img src="./img/rand4.img.png" alt="not found">
         </div>
     </div>
     
@@ -91,22 +91,22 @@
 
     <div>
         <div>
-            <img src="" alt="">
+            <img src="./img/rand5.img.png" alt="not found">
         </div>
         <div>
             <p></p>
             <h3></h3>
             <p></p>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand5.icon1.png" alt="not found">
                 <p></p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand5.icon2.png" alt="not found">
                 <p></p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand5.icon3.png" alt="not found">
                 <p></p>
             </div>
         </div>
@@ -125,7 +125,7 @@
             <p></p>
         </div>  
         <div>
-            <img src="" alt="">
+            <img src="./img/rand6.img.png" alt="not found">
         </div>
     </div>
 
@@ -136,22 +136,22 @@
         <p></p>
         <div>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./img/rand7.icon1.png" alt="not found">
+                <img src="./img/rand7.com1.png" alt="not found">
             </div>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./img/rand7.icon2.png" alt="not found">
+                <img src="./img/rand7.com2.png" alt="not found">
             </div>
         </div>
         <div>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./img/rand7.icon3.png" alt="not found">
+                <img src="./img/rand7.com3.png" alt="not found">
             </div>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./img/rand7-10.icon4.png" alt="not found">
+                <img src="./img/rand7.com4.png" alt="not found">
             </div>
         </div>
         <div>
@@ -165,23 +165,23 @@
     <p></p>
     <div>
         <div>
-            <img src="" alt="">
+            <img src="./img/rand8.img1.png" alt="not found">
             <p></p>
             <p></p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/rand8.img2.png" alt="not found">
             <p></p>
             <p></p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/rand8.img3.png" alt="not found">
             <p></p>
             <p></p>
         </div>
     </div>
     <div>
-        <img src="" alt="">
+        <img src="./img/rand8.icon.png" alt="not found">
     </div>
 
     /* Rnadul 9 */
@@ -246,10 +246,10 @@
     <p></p>
     <div>
         <div>
-            <img src="" alt="">
+            <img src="./img/rand10.stele.png" alt="not found">
             <p></p>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand10.icon1.png" alt="not found">
                 <div>
                     <p></p>
                     <p></p>
@@ -258,10 +258,10 @@
         </div>
         <div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand10.stele.png" alt="not found">
                 <p></p>
                 <div>
-                    <img src="" alt="">
+                    <img src="./img/rand10.icon2.png" alt="not found">
                     <div>
                         <p></p>
                         <p></p>
@@ -270,10 +270,10 @@
         </div>
         <div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand10.stele.png" alt="not found">
                 <p></p>
                 <div>
-                    <img src="" alt="">
+                    <img src="./img/rand7-10.icon4.png" alt="not found">
                     <div>
                         <p></p>
                         <p></p>
@@ -290,7 +290,7 @@
             <button></button>
         </div>
         <div>
-
+            <img src="./img/rand11.img.png" alt="not found">
         </div>
     </div>
 
@@ -299,10 +299,12 @@
     <footer>
         <div>
             <div>
-                <img src="" alt="">
+                <img src="./img/header.icon.png" alt="not found">
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/rand12.icon-insta.png" alt="not found">
+                <img src="./img/rand12.icon-fbuc.png" alt="not found">
+                <img src="./img/rand12.icon-twit.png" alt="not found">
             </div>
         </div>
         <div>
