--- a/New project/web-site.html
+++ b/New project/web-site.html
@@ -150,7 +150,7 @@
                 <img src="./img/rand7.com3.png" alt="not found">
             </div>
             <div>
-                <img src="./img/rand7-10.icon4.png" alt="not found">
+                <img src="./img/rand7.icon4.png" alt="not found">
                 <img src="./img/rand7.com4.png" alt="not found">
             </div>
         </div>
@@ -273,7 +273,7 @@
                 <img src="./img/rand10.stele.png" alt="not found">
                 <p></p>
                 <div>
-                    <img src="./img/rand7-10.icon4.png" alt="not found">
+                    <img src="./img/rand10.icon3.png" alt="not found">
                     <div>
                         <p></p>
                         <p></p>
@@ -299,7 +299,8 @@
     <footer>
         <div>
             <div>
-                <img src="./img/header.icon.png" alt="not found">
+                <img src="./img/header.logo.png" alt="not found">
+                <p></p>
             </div>
             <div>
                 <img src="./img/rand12.icon-insta.png" alt="not found">
