Am efectuat modificari

--- a/Code.html/My Cv.html
+++ b/Code.html/My Cv.html
@@ -3,44 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV-personal NIchifor Eduard</title>
+    <title>Cv-Nichifor Eduard</title>
     <link rel="stylesheet" href="./style/main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="prime">
-        <h1>Nichifor Eduard</h1>
-<img src="./img/photo_2024-10-23_21-22-18.jpg" width="20%" height="20%"/>
-<!-- cum sa pozitionez imaginea ca nu reusesc nici prin css ici prin html-->
+
+    <div>
+        <div></div>
+        <div></div>
     </div>
-    <div class="green">
- <H2><i>Detalii de cintact:</i></H2>
-    <ul>
-        <li>nichifor.eduard20@gmail.com</li>
-        <li>0792370987</li>
-        <li>Cluj-Napoca; Floresti</li>
-    </ul>
-    </div>
-    <div class="information">
- <h2><i>Educatie</i></h2>
-    <ol>
-        <li>Scoala de arte plastice "Romulus Ladea"</li>
-        <dd> -Anii de studi 2018-2021</dd>
-        <dd> -Specializare: Arhitectura</dd>
-        <li>Universitate de Stiinte Economice</li>
-        <dd> -Anii de studi 2023-2026</dd>
-        <dd> -Specializare: Finate and Banking</dd> 
-    </ol>
-    </div>
-    <div>   
- <h2><i>Abilitati personale</i></h2>  
-    <ul>
-        <li><u>Comunicabil</u></li>
-        <li><u>Ambitios</u></li>
-        <li><u>Perseverent</u></li>
-        <li><u>Creativitate</u></li>
-        <li><u>Toleranta la stre</u></li>
-        <li><u>Flexibilitate</u></li>
-    </ul>
-    </div>
+
 </body>
 </html>
