--- a/New project/web-site.html
+++ b/New project/web-site.html
@@ -152,14 +152,12 @@
     <div class="second-bg">
 
          <!--  /* Rnadul 7 */ -->
-        <div >
+        <div class="p20">
             <div class="text-center mb20">
             <h3>Quick & Easy Process</h3>
             <p class="normal-text mb0">Do you require some help for your project: Conception workshop,</p>
               <p class="normal-text m0"> prototyping, marketing strategy, landing page, Ux/UI?</p>
             </div>
-
-
             <div class="people-flex">
                 <div class="people-column mb20">
                     <div class="flex-aling-centre add-space mb20">
