--- a/New project/web-site-light.html
+++ b/New project/web-site-light.html
@@ -31,7 +31,7 @@
                 <p class="header-title">Product</p>
             </div>
             <nav class="navbar">
-                <a class="bold-link" href="#">Product</a>
+                <a class="bold-link" href="./web-site-dark.html">Product</a>
                 <a class="normal-link mlr10" href="#">Customers</a>
                 <a class="normal-link" href="#">Pricing</a>
                 <a class="normal-link mlr10" href="#">Resources</a>
