--- a/New project/web-site-dark.html
+++ b/New project/web-site-dark.html
@@ -195,22 +195,22 @@
             <div class="flex-container row-column">
                 <div class="box-shadow">
                     <img class="w100 h185" src="./img/rand8.img1.png" alt="not found"/>
-                    <div class="p10">
-                        <p class="normal-text">By <span class="bold-text">Wahid Ari</span>  |  03 March 2019</p>
+                    <div class="p10 black-text">
+                        <p class="normal-text-black">By <span class="bold-text-black">Wahid Ari</span>  |  03 March 2019</p>
                         <p class="big-text">Increasing Prosperity With Positive Thinking</p>
                     </div>
                 </div>
                 <div class="box-shadow ">
                     <img class="w100 h185" src="./img/rand8.img2.png" alt="not found"/>
                     <div class="p10">
-                        <p class="normal-text">By <span class="bold-text">Wahid Ari</span> | 03 March 2019</p>
+                        <p class="normal-text-black">By <span class="bold-text-black">Wahid Ari</span> | 03 March 2019</p>
                         <p class="big-text go-green">Motivation Is The First Step To Success</p>
                     </div>
                 </div>
                 <div class="box-shadow">
                     <img class="w100 h185" src="./img/rand8.img3.png" alt="not found"/>
                     <div class="p10">
-                        <p class="normal-text">By <span class="bold-text">Wahid Ari</span> | 03 March 2019</p>
+                        <p class="normal-text-black">By <span class="bold-text-black">Wahid Ari</span> | 03 March 2019</p>
                         <p class="big-text">Success Steps For Your Personal Or Business</p>
                     </div>
                 </div>
@@ -225,10 +225,10 @@
             <p class="normal-text">We offer competitive price</p>
         </div>
         <div class="flex-container row-column m50">
-            <div class="price-box">
+            <div class="price-box black-text">
                 <div class="text-center">
                     <p class="big-text">Free</p>
-                    <p class="normal-text">Brief price description</p>
+                    <p class="normal-text-black">Brief price description</p>
                 </div>
                 <div class="fixed-price">
                     <p class="price-text">0</p>
@@ -237,7 +237,7 @@
                         <p class="per-month-text">Per / month</p>
                     </div>
                 </div>
-                <div class="text-center normal-text">
+                <div class="text-center normal-text-black">
                     <p>Only 2 Operators</p>
                     <p>Notifications</p>
                     <p>Landing Pages</p>
@@ -265,11 +265,11 @@
                     </div>
                 </div>
             </div>
-            <div class="price-box">
+            <div class="price-box black-text">
                 <div>
                     <div class="text-center">
                         <p class="big-text">Premium</p>
-                        <p class="normal-text">Brief price description</p>
+                        <p class="normal-text-black">Brief price description</p>
                     </div>
                     <div class="fixed-price">
                         <p class="price-text">10</p>
@@ -278,7 +278,7 @@
                             <p class="per-month-text">Per / month</p>
                         </div>
                     </div>
-                    <div class="text-center normal-text">
+                    <div class="text-center normal-text-black">
                         <p>10+ Operators</p>
                         <p>Notifications</p>
                         <p>Landing Pages</p>
@@ -352,7 +352,7 @@
         <footer class="flex-container row-column m50 aling-top center-mobile">
             <div class="p10 w20">
                 <div class="mb20 mt10">
-                    <img src="./img/rand12.logo.png" alt="not found"/>
+                    <img src="./img/rand12.logo-black.png" alt="not found"/>
                 </div>
                 <div class="social-media-icon">
                     <img src="./img/rand12.icon-insta.png" alt="not found"/>
