Combinare de pagini negru si alb

--- a/New project/web-site-dark.html
+++ b/New project/web-site-dark.html
@@ -37,7 +37,7 @@
                 <a class="normal-link mlr10" href="#">Resources</a>
                 <button class="custom-white-button">Sign In</button>
                 <button class="green-button mlr20">Sign Up</button>
-                <img src="./img/header.icon.png" alt="not found">
+                <a href="./web-site-light.html"><img src="./img/header.icon.png" alt="not found"></a>
             </nav>
         </header>
         
