--- a/New project/web-site-light.html
+++ b/New project/web-site-light.html
@@ -32,12 +32,12 @@
             </div>
             <nav class="navbar">
                 <a class="bold-link" href="./web-site-dark.html">Product</a>
-                <a class="normal-link mlr10" href="./web-site-dark.html">Customers</a>
+                <a class="normal-link mlr10" href="#">Customers</a>
                 <a class="normal-link" href="#">Pricing</a>
                 <a class="normal-link mlr10" href="#">Resources</a>
                 <button class="custom-white-button">Sign In</button>
                 <button class="green-button mlr20">Sign Up</button>
-                <img src="./img/header.icon.png" alt="not found">
+                <a href="./web-site-dark.html"><img src="./img/header.icon.png" alt="not found"></a>
             </nav>
         </header>
         
