--- a/New project/web-site-dark.html
+++ b/New project/web-site-dark.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,10 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
 </head>
-<body class="">
-
+<body>
     <div class="flex-container show-none-desktop">
          <div class="logo-display">
              <img class="header-logo" src="./img/header.logo.png" alt="not found">
@@ -40,7 +37,6 @@
                 <img src="./img/header.icon.png" alt="not found">
             </nav>
         </header>
-        
         <!--  /* Rnadul 2 */ -->
         <div class="flex-container row-column-revers center-mobile">
             <div class="w50">
@@ -91,7 +87,6 @@
         </div>
     </div>
     <div class="container-with">
-
         <!--  /* Rnadul 4 */ -->
         <div class="flex-container row-column-revers m50">
             <div class="pad10 w50">
