--- a/New project/web-site-light.html
+++ b/New project/web-site-light.html
@@ -352,7 +352,7 @@
         <footer class="flex-container row-column m50 aling-top center-mobile">
             <div class="p10 w20">
                 <div class="mb20 mt10">
-                    <img src="./img/rand12.logo.png" alt="not found"/>
+                    <img src="./img/rand12-logo.png" alt="not found"/>
                 </div>
                 <div class="social-media-icon">
                     <img src="./img/rand12.icon-insta.png" alt="not found"/>
