--- a/New project/web-site-light.html
+++ b/New project/web-site-light.html
@@ -62,7 +62,7 @@
         <!--  /* Rnadul 3 */ -->
         <div class="m50">
             <h2>Product  was Built Specifically for You</h2>
-            <div class="flex-container row-column m50">
+            <div class="flex-container-3 row-column m50">
                 <div class="w20">
                     <img width="50" height="50" src="./img/rand3.icon1.png" alt="not found"/>
                     <p class="second-row-text">First click tests</p>
