--- a/New project/site-for-customer.html
+++ b/New project/site-for-customer.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="container-with">
     <!-- Randul 1-->
 <header>
     <div>
@@ -59,7 +59,7 @@
      <!--Randul 4-->
      <h3>Product is being used with great effects alongside:</h3>
      <div>
-        <img src="./img-customer/randul-4-img.png" alt="">
+        <img width="424" src="./img-customer/randul-4-img.png" alt="">
         <div>
             <div>
                 <div>
