--- a/New project/page-customers-light-v1.html
+++ b/New project/page-customers-light-v1.html
@@ -15,15 +15,15 @@
 
     <!-- Randul 1-->
     <header class="flex-container ptb20">
-        <div class="flex-align">
+        <div class="flex-align-center">
             <img class="header-logo" src="./img-customer/logo-header.png" alt="img"/>
             <p class="header-title">Product</p>
         </div>
             <nav class="flex-align-center">
-                <a class="normal-link" href="#">Product</a>
-                <a class="bold-link mlr10" href="#">Customers</a>
+                <a class="normal-link" href="./page-product-light.html">Product</a>
+                <a class="bold-link mlr20" href="#">Customers</a>
                 <a class="normal-link" href="#">Pricing</a>
-                <a class="normal-link mlr10" href="#">Resources</a>
+                <a class="normal-link mlr20" href="#">Resources</a>
                 <button class="custom-white-button">Sign In</button>
                 <button class="green-button mlr20">Sign Up</button>
                 <img src="./img-customer/nav-bar.png" alt="not found"/>
