--- a/New project/page-product-light.html
+++ b/New project/page-product-light.html
@@ -31,15 +31,16 @@
                 <p class="header-title">Product</p>
             </div>
             <nav class="navbar">
-                <a class="bold-link" href="./web-site-dark.html">Product</a>
-                <a class="normal-link mlr10" href="#">Customers</a>
+                <a class="bold-link" href="#">Product</a>
+                <a class="normal-link mlr10" href="./page-customers-light-v1.html">Customers</a>
                 <a class="normal-link" href="#">Pricing</a>
                 <a class="normal-link mlr10" href="#">Resources</a>
                 <button class="custom-white-button">Sign In</button>
                 <button class="green-button mlr20">Sign Up</button>
-                <a href="./web-site-dark.html"><img src="./img/header.icon.png" alt="not found"></a>
+                <a href="./page-product-dark.html"><img src="./img/header.icon.png" alt="not found"></a>
             </nav>
         </header>
+        
         
         <!--  /* Rnadul 2 */ -->
         <div class="flex-container row-column-revers center-mobile">
