--- a/New project/advice list/index.html
+++ b/New project/advice list/index.html
@@ -15,7 +15,7 @@
             <div class="text-box-3 ">
                 <img class="imgagine" src="./img/Group 21.png" alt="not found">
             </div>
-                <button class="button" id="button"><img src="./img/svg-gobbler (30) 1.png"></button>
+            <button class="button" id="button" title="Click for advice"><img src="./img/svg-gobbler (30) 1.png" alt="Click for advice"></button>
         </div>
     </div>
     <script src="./function.js"></script>
